# gis-application

./: .clang-format  .gitignore  CMakeLists.txt  gapoint.cpp  gapoint.h  gautils.cpp  gautils.h  gavector.cpp  gavector.h  giscoordinatesconverterinterface.h  giscoordinatesconvertersimple.cpp  giscoordinatesconvertersimple.h  gisentity.cpp  gisentity.h  gisfield.cpp  gisfield.h  gisfilereader.cpp  gisfilereader.h  gisfilereaderconvertdecorator.cpp  gisfilereaderconvertdecorator.h  gisfilereaders.cpp  gisfilereaders.h  gisshpfilereader.cpp  gisshpfilereader.h  gistabfilereader.cpp  gistabfilereader.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
clipper/: CMakeLists.txt  clipper.cpp  clipper.hpp  clipper_version.txt
coordConvert/: CMakeLists.txt  coordconvert.cpp  coordconvert.h
mitab/: CMakeLists.txt  mitab_version.txt
mitab/cpl/: CMakeLists.txt  cpl_config.h  cpl_conv.cpp  cpl_conv.h  cpl_csv.cpp  cpl_csv.h  cpl_dir.cpp  cpl_error.cpp  cpl_error.h  cpl_findfile.cpp  cpl_getexecpath.cpp  cpl_minixml.cpp  cpl_minixml.h  cpl_multiproc.cpp  cpl_multiproc.h  cpl_path.cpp  cpl_port.h  cpl_string.cpp  cpl_string.h  cpl_vsi.h  cpl_vsi_mem.cpp  cpl_vsi_virtual.h  cpl_vsil.cpp  cpl_vsil_unix_stdio_64.cpp  cpl_vsil_win32.cpp  cpl_vsisimple.cpp  cplgetsymbol.cpp  cplstring.cpp
mitab/mitab/: CMakeLists.txt  mitab.h  mitab_bounds.cpp  mitab_capi.cpp  mitab_capi.h  mitab_coordsys.cpp  mitab_datfile.cpp  mitab_feature.cpp  mitab_feature_mif.cpp  mitab_geometry.cpp  mitab_geometry.h  mitab_idfile.cpp  mitab_imapinfofile.cpp  mitab_indfile.cpp  mitab_mapcoordblock.cpp  mitab_mapfile.cpp  mitab_mapheaderblock.cpp  mitab_mapindexblock.cpp  mitab_mapobjectblock.cpp  mitab_maptoolblock.cpp  mitab_middatafile.cpp  mitab_miffile.cpp  mitab_ogr_datasource.cpp  mitab_ogr_driver.cpp  mitab_ogr_driver.h  mitab_priv.h  mitab_rawbinblock.cpp  mitab_spatialref.cpp  mitab_tabfile.cpp  mitab_tabseamless.cpp  mitab_tabview.cpp  mitab_tooldef.cpp  mitab_utils.cpp  mitab_utils.h
mitab/ogr/: CMakeLists.txt  gml2ogrgeometry.cpp  ogr2gmlgeometry.cpp  ogr_api.cpp  ogr_api.h  ogr_attrind.cpp  ogr_attrind.h  ogr_core.h  ogr_feature.h  ogr_featurestyle.h  ogr_fromepsg.cpp  ogr_gensql.cpp  ogr_gensql.h  ogr_geometry.h  ogr_geos.h  ogr_miattrind.cpp  ogr_p.h  ogr_spatialref.h  ogr_srs_api.h  ogr_srs_dict.cpp  ogr_srs_esri.cpp  ogr_srs_proj4.cpp  ogr_srs_xml.cpp  ogr_srsnode.cpp  ogrct.cpp  ogrcurve.cpp  ogrdatasource.cpp  ogrfeature.cpp  ogrfeaturedefn.cpp  ogrfeaturequery.cpp  ogrfeaturestyle.cpp  ogrfielddefn.cpp  ogrgeometry.cpp  ogrgeometrycollection.cpp  ogrgeometryfactory.cpp  ogrlayer.cpp  ogrlinearring.cpp  ogrlinestring.cpp  ogrmultilinestring.cpp  ogrmultipoint.cpp  (+11 more)
shapelib/: CMakeLists.txt  dbfopen.c  safileio.c  sbnsearch.c  shapefil.h  shapelib_version.txt  shpopen.c  shptree.c
